feat: add user and user login

--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -12,6 +12,7 @@ spring.jpa.generate-ddl=
 spring.jpa.hibernate.ddl-auto=
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=
 
+api.security.token.secret = 
 
 
 #------> H2 Config <-----
