--- a/pom.xml
+++ b/pom.xml
@@ -24,13 +24,24 @@
 			<version>3.2.5</version>
 		</dependency>
 
+		<dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.4.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jpa</artifactId>
 			<version>2.0.8</version>
 		</dependency>
-
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
