--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,12 @@
-{"properties": [{
-  "name": "spring.datasource.plataform",
-  "type": "java.lang.String",
-  "description": "A description for 'spring.datasource.plataform'"
-}]}
+{"properties": [
+  {
+    "name": "spring.datasource.plataform",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.datasource.plataform'"
+  },
+  {
+    "name": "api.security.token.secret",
+    "type": "java.lang.String",
+    "description": "A description for 'api.security.token.secret'"
+  }
+]}
