--- a/pom.xml
+++ b/pom.xml
@@ -24,14 +24,10 @@
 			<version>3.2.5</version>
 		</dependency>
 
-
-
-		<dependency>
-			<groupId>com.auth0</groupId>
-			<artifactId>java-jwt</artifactId>
-			<version>4.4.0</version>
-		</dependency>
-
+		 <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+    </dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
